# PublicSpace

./: README.md  WORKSPACE  bazel
adp/dal_v2/server/repl/: BUILD.bazel  init.txt  start.sh
ann/src/main/java/com/twitter/ann/faiss/selftest/: BUILD.bazel  SelfTest.java
ann/src/main/scala/com/twitter/ann/debug_util/: AnnThriftQueryServiceDebugUtil.scala  BUILD.bazel  README.rst  SampleExamples.scala
ann/src/test/java/com/twitter/ann/hnsw/: BUILD.bazel  HnswIOUtilTest.java  HnswIndexTest.java
ann/src/test/scala/com/twitter/ann/annoy/: AnnoyCommonTest.scala  BUILD.bazel  RawAnnoyIndexBuilderSpec.scala  RawAnnoyQueryIndexSpec.scala  TypedAnnoyIndexBuilderWithFileSpec.scala  TypedAnnoyQueryIndexWithFileSpec.scala
ann/src/test/scala/com/twitter/ann/manhattan/: BUILD.bazel  ManhattanEmbeddingProducerSpec.scala
ann/src/test/scala/com/twitter/ann/scalding/offline/: BUILD.bazel  IndexingStrategyTest.scala  KnnHelperTest.scala  KnnTruthSetGeneratorTest.scala  ParameterlessQueryable.scala
ann/src/test/scala/com/twitter/ann/scalding/offline/indexbuilder/: BUILD.bazel  IndexBuilderTest.scala
ann/src/test/scala/com/twitter/ann/serialization/: BUILD.bazel  PersistedEmbeddingInjectionTest.scala  ThriftIteratorIOTest.scala
ann/src/test/scala/com/twitter/ann/service/query_server/common/throttling/: BUILD.bazel  ThrottlingTaskSpec.scala
auth/api-verification/src/test/scala/: BUILD.bazel
auth/api-verification/src/test/scala/com/twitter/auth/apiverification/: ApiVerificationAppFeatureTest.scala
auth/authentication/src/test/scala/: BUILD.bazel
auth/authentication/src/test/scala/com/twitter/auth/authentication/: CommonFixtures.scala
auth/authentication/src/test/scala/com/twitter/auth/authentication/authenticator/: AuthenticatorLibrarySpec.scala  RequestCredentialVerifierSpec.scala
auth/authentication/src/test/scala/com/twitter/auth/authentication/models/: AuthHeaderSpec.scala  RequestWithAmpEmailTokenSpec.scala
auth/authentication/src/test/scala/com/twitter/auth/authentication/unpacker/: TwitterRequestUnpackerSpec.scala
auth/authentication/src/test/scala/com/twitter/auth/authentication/utils/: AccessTokenUtilsSpec.scala  ActAsUserUtilsSpec.scala  AuthenticationUtilsSpec.scala
auth/customerauthtooling/: BUILD.bazel  CONFIG.ini  PROJECT  README.md  customerauthtooling.aurora  customerauthtooling.workflow.json
auth/customerauthtooling/docs/: faq.rst  index.rst  overview.rst  quickstart.rst  release_notes.rst  runbook.rst  service_info.rst
auth/customerauthtooling/scripts/: cli.sh  runlocal.sh
auth/customerauthtooling/server/src/main/resources/: BUILD  clients.yml  dp_recommender_output.csv  dps.csv  scope_to_dps.csv
auth/customerauthtooling/server/src/main/resources/config/: decider.yml
auth/customerauthtooling/server/src/main/scala/com/twitter/auth/customerauthtooling/api/: BUILD.bazel  CustomerauthtoolingThriftServer.scala  CustomerauthtoolingThriftServerWarmupHandler.scala
auth/customerauthtooling/server/src/main/scala/com/twitter/auth/customerauthtooling/api/Utils/: BUILD.bazel  NgRouteConfigs.scala  Policies.scala  Util.scala
auth/customerauthtooling/server/src/main/scala/com/twitter/auth/customerauthtooling/api/components/: AdoptionCheckerService.scala  (+8 more)
auth/customerauthtooling/server/src/main/scala/com/twitter/auth/customerauthtooling/cli/: BUILD  InteractiveShellRunner.scala  JvmForker.scala
auth/customerauthtooling/server/src/test/resources/: BUILD.bazel  routes.csv  routes_no_proj.csv
auth/customerauthtooling/server/src/test/scala/com/twitter/auth/customerauthtooling/api/: BUILD.bazel  CustomerauthtoolingThriftFeatureTest.scala  CustomerauthtoolingThriftStartupTest.scala
auth/customerauthtooling/server/src/test/scala/com/twitter/auth/customerauthtooling/cli/: BUILD.bazel
auth/customerauthtooling/thrift/src/main/thrift/: AdoptionStatus.thrift  BUILD  CustomerAuthToolingService.thrift  EndpointInfo.thrift  EndpointMetadata.thrift  RouteDraft.thrift  RouteInfo.thrift
auth/ell-verification/src/test/scala/: BUILD.bazel
auth/ell-verification/src/test/scala/com/twitter/auth/ellverification/: EllVerificationAppFeatureTest.scala
auth/filters/src/test/scala/com/twitter/auth/filters/ampemail/: AmpEmailCorsForEmailVersion2FilterTest.scala  BUILD.bazel
auth/oauth/src/test/scala/com/twitter/auth/urls/: BUILD.bazel  ClientApplicationUriValidatorSpec.scala  OAuth2RedirectUriValidatorSpec.scala
auth/oidc/src/main/scala/com/twitter/auth/jwks/: BUILD.bazel  TwitterOIDCJwksConfig.scala  TwitterOIDCPublicKey.scala
auth/pasetoheaders/src/main/scala/com/twitter/auth/pasetoheaders/s2s/models/: BUILD.bazel  JacksonAnnotations.scala  Principals.scala
auth/pasetoheaders/src/main/scala/com/twitter/auth/pasetoheaders/s2s/token/: BUILD.bazel  PrincipalExtractor.scala  PrincipalSigner.scala
auth/pasetoheaders/src/test/java/com/twitter/auth/pasetoheaders/encryption/: BUILD.bazel  ClaimServiceTest.java  FastPasetoTokenBuilderTest.java  FastPasetoV2PublicBuilderTest.java  FastPasetoV2PublicParserBuilderTest.java  FastPasetoV2PublicParserTest.java  InMemoryKeyProviderTest.java  KeyGenTest.java  KeyUtilsTest.java  PasetoMatcher.java  SigningServiceTest.java  Stubs.java
auth/pasetoheaders/src/test/java/com/twitter/auth/pasetoheaders/models/: BUILD.bazel  PassportSerializerTest.java
auth/pasetoheaders/src/test/scala/com/twitter/auth/pasetoheaders/passport/: BUILD.bazel  PassportExtractorTest.scala  PassportSignerTest.scala
auth/pasetoheaders/src/test/scala/com/twitter/auth/pasetoheaders/s2s/models/: BUILD.bazel  PrincipalsTest.scala
auth/passport-signing/src/test/scala/: BUILD.bazel
auth/passport-signing/src/test/scala/com/twitter/auth/passportsigning/: CryptoUtilsSpec.scala
auth/passport-tools/src/test/scala/com/twitter/auth/passport_tools/: BUILD.bazel  PassportRetriever.scala
auth/scope-verification/src/test/scala/: BUILD.bazel
auth/scope-verification/src/test/scala/com/twitter/auth/scopeverification/: ScopeVerificationFeatureTest.scala
auth/sso/src/test/scala/com/twitter/auth/sso/signature/: BUILD.bazel  SsoSignatureClientSpec.scala
(+1039 files in other folders)
