jvm_binary(
    name = "bin",
    basename = "customerauthtooling",
    main = "com.twitter.auth.customerauthtooling.api.CustomerauthtoolingThriftServerMain",
    runtime_platform = "java11",
    dependencies = [
        "3rdparty/jvm/ch/qos/logback:logback-classic",
        "auth/customerauthtooling/server/src/main/scala/com/twitter/auth/customerauthtooling/api",
        "auth/customerauthtooling/server/src/main/scala/com/twitter/auth/customerauthtooling/cli",
        "finagle/finagle-zipkin-scribe/src/main/scala",
        "finatra/inject/inject-logback/src/main/scala",
        "loglens/loglens-logback/src/main/scala/com/twitter/loglens/logback",
        "twitter-server-internal/src/main/scala",
        "twitter-server/logback-classic/src/main/scala",
    ],
)

#  Aurora Workflows build phase convention requires a jvm_app named with ${project-name}-app
jvm_app(
    name = "customerauthtooling-app",
    archive = "zip",
    binary = ":bin",
)
