junit_tests(
    sources = ["**/*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    runtime_platform = "java11",
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/com/twitter:joauth",
        "3rdparty/jvm/junit",
        "3rdparty/jvm/org/apache/httpcomponents:httpclient",
        "3rdparty/jvm/org/mockito:mockito-core",
        "3rdparty/jvm/org/scalatest",
        "3rdparty/jvm/org/scalatestplus:junit",
        "3rdparty/jvm/org/scalatestplus:mockito",
        "auth/authentication/src/main/scala/com/twitter/auth/authentication",
        "auth/enforcement/src/main/thrift:thrift-scala",
        "finagle/finagle-stats",
        "finatra-internal/tfe",
        "util/util-stats/src/main/scala",
    ],
)
