junit_tests(
    sources = ["**/*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    runtime_platform = "java11",
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/junit",
        "3rdparty/jvm/org/scalatest",
        "3rdparty/jvm/org/scalatestplus:junit",
        "auth/enforcement/src/main/thrift:thrift-scala",
        "auth/passport-signing/src/main/scala/com/twitter/auth/passportsigning",
        "decider",
    ],
)
