junit_tests(
    sources = ["*.java"],
    compiler_option_sets = ["fatal_warnings"],
    runtime_platform = "java11",
    tags = [
        "bazel-compatible",
        "known-to-fail-jira:RSR-191",
    ],
    dependencies = [
        "3rdparty/jvm/com/google/guava",
        "3rdparty/jvm/com/google/guava:guava-testlib",
        "3rdparty/jvm/com/twitter/bijection:core",
        "3rdparty/jvm/junit",
        "3rdparty/jvm/org/mockito:mockito-core",
        "3rdparty/jvm/org/scalatestplus:junit",
        "ann/src/main/java/com/twitter/ann/hnsw",
        "ann/src/main/thrift/com/twitter/ann/common:ann-common-java",
        "mediaservices/commons",
        "src/java/com/twitter/search/common/file",
    ],
)
