junit_tests(
    sources = ["*.java"],
    compiler_option_sets = ["fatal_warnings"],
    runtime_platform = "java11",
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/com/fasterxml/jackson/core:jackson-annotations",
        "3rdparty/jvm/com/fasterxml/jackson/core:jackson-core",
        "3rdparty/jvm/com/fasterxml/jackson/core:jackson-databind",
        "3rdparty/jvm/com/fasterxml/jackson/datatype:jackson-datatype-jdk8",
        "3rdparty/jvm/com/google/guava",
        "3rdparty/jvm/dev/paseto/jpaseto:jpaseto-api",
        "3rdparty/jvm/dev/paseto/jpaseto:jpaseto-bouncy-castle",
        "3rdparty/jvm/dev/paseto/jpaseto:jpaseto-impl",
        "3rdparty/jvm/dev/paseto/jpaseto:jpaseto-jackson",
        "3rdparty/jvm/junit",
        "3rdparty/jvm/org/hamcrest:hamcrest-all",
        "3rdparty/jvm/org/mockito:mockito-core",
        "auth/pasetoheaders/src/main/java/com/twitter/auth/pasetoheaders/encryption",
        "auth/pasetoheaders/src/main/java/com/twitter/auth/pasetoheaders/models",
    ],
)
