junit_tests(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    runtime_platform = "java11",
    strict_deps = False,
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/org/mockito:mockito-core",
        "3rdparty/jvm/org/scalatest",
        "3rdparty/jvm/org/scalatestplus:junit",
        "3rdparty/jvm/org/scalatestplus:mockito",
        "auth/sso/src/main/scala/com/twitter/auth/sso/signature",
    ],
)
