junit_tests(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    runtime_platform = "java11",
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/junit",
        "3rdparty/jvm/org/scalatest",
        "3rdparty/jvm/org/scalatestplus:junit",
        "ann/src/main/scala/com/twitter/ann/service/query_server/common/throttling",
        "util/util-mock/src/main/scala/com/twitter/util/mock",
    ],
)
