junit_tests(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    runtime_platform = "java11",
    strict_deps = False,
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/ch/qos/logback:logback-classic",
        "3rdparty/jvm/com/google/inject:guice",
        "3rdparty/jvm/net/codingwell:scala-guice",
        "3rdparty/jvm/org/scalatest",
        "3rdparty/jvm/org/scalatestplus:junit",
        "3rdparty/jvm/org/slf4j:slf4j-api",
        "auth/customerauthtooling/server/src/main/scala/com/twitter/auth/customerauthtooling/api",
        "auth/customerauthtooling/server/src/test/resources",
        "auth/customerauthtooling/thrift/src/main/thrift:thrift-scala",
        "finatra-internal/mtls-thriftmux/src/test/scala:test-deps",
        "finatra/inject/inject-core/src/main/scala/com/twitter/inject",
        "finatra/inject/inject-core/src/test/scala/com/twitter/inject",
        "finatra/inject/inject-server/src/main/scala",
        "finatra/inject/inject-server/src/test/scala/com/twitter/inject/server",
        "twitter-server-internal/src/main/scala",
        "util/util-core:scala",
        "util/util-mock/src/main/scala/com/twitter/util/mock",
        "util/util-slf4j-api/src/main/scala",
    ],
)
