junit_tests(
    sources = ["**/*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    runtime_platform = "java11",
    strict_deps = False,
    tags = [
        "bazel-compatible",
        "logging_impl_check_whitelisted_target",
    ],
    dependencies = [
        "3rdparty/jvm/ch/qos/logback:logback-classic",
        "3rdparty/jvm/com/fasterxml/jackson/dataformat:jackson-dataformat-yaml",
        "3rdparty/jvm/com/google/inject:guice",
        "3rdparty/jvm/commons-lang",
        "3rdparty/jvm/info/picocli",
        "3rdparty/jvm/javax/inject:javax.inject",
        "3rdparty/jvm/net/codingwell:scala-guice",
        "3rdparty/jvm/org/apache/commons:commons-csv",
        "3rdparty/jvm/org/scalatest",
        "3rdparty/jvm/org/scalatestplus:junit",
        "3rdparty/jvm/org/slf4j:jul-to-slf4j",
        "3rdparty/jvm/org/slf4j:slf4j-api",
        "auth/customerauthtooling/server/src/main/scala/com/twitter/auth/customerauthtooling/cli",
        "auth/customerauthtooling/server/src/test/resources",
        "auth/customerauthtooling/thrift/src/main/thrift:thrift-scala",
        "finagle/finagle-mux/src/main/scala",
        "finagle/finagle-thrift/src/main/scala",
        "finagle/finagle-thriftmux/src/main/scala",
        "finatra-internal/mtls-thriftmux/src/main/scala",
        "finatra-internal/mtls-thriftmux/src/test/scala:test-deps",
        "finatra/http-server/src/main/scala/com/twitter/finatra/http",
        "finatra/inject/inject-app/src/main/scala/com/twitter/inject/app/internal",
        "finatra/inject/inject-core/src/main/scala",
        "finatra/inject/inject-core/src/main/scala/com/twitter/inject",
        "finatra/inject/inject-core/src/test/scala/com/twitter/inject",
        "finatra/inject/inject-server/src/main/scala",
        "finatra/inject/inject-server/src/test/scala/com/twitter/inject/server",
        "finatra/inject/inject-thrift-client/src/main/scala",
        "finatra/thrift/src/main/scala/com/twitter/finatra/thrift",
        "twitter-server-internal/src/main/scala",
        "util/util-core:scala",
        "util/util-mock/src/main/scala/com/twitter/util/mock",
        "util/util-slf4j-api/src/main/scala",
    ],
)
