scala_library(
    compiler_option_sets = ["fatal_warnings"],
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/com/google/inject:guice",
        "3rdparty/jvm/javax/inject:javax.inject",
        "3rdparty/jvm/net/codingwell:scala-guice",
        "3rdparty/jvm/org/apache/commons:commons-csv",
        "3rdparty/jvm/org/slf4j:slf4j-api",
        "auth/customerauthtooling/server/src/main/scala/com/twitter/auth/customerauthtooling/api/components/adoptionchecker",
        "auth/customerauthtooling/server/src/main/scala/com/twitter/auth/customerauthtooling/api/components/dpprovider",
        "auth/customerauthtooling/server/src/main/scala/com/twitter/auth/customerauthtooling/api/components/pacmanngroutestorage",
        "auth/customerauthtooling/server/src/main/scala/com/twitter/auth/customerauthtooling/api/components/parameterresolver",
        "auth/customerauthtooling/server/src/main/scala/com/twitter/auth/customerauthtooling/api/components/routedrafter",
        "auth/customerauthtooling/server/src/main/scala/com/twitter/auth/customerauthtooling/api/components/routeinfoservice",
        "auth/customerauthtooling/server/src/main/scala/com/twitter/auth/customerauthtooling/api/models",
        "auth/customerauthtooling/thrift/src/main/thrift:thrift-scala",
        "auth/policykeeper/server/src/main/scala/com/twitter/auth/policykeeper/api/logger",
        "cim/pacman/server/src/main/scala/com/twitter/cim/pacman/common/exception",
        "kite/clients/scala/src/main/com/twitter/kite/clients",
    ],
)
